<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_12sdp"
                android:scaleType="center"
                android:src="@drawable/ic_appl" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_weight="6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:text="@string/fruit"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_14sdp"
                    android:text="@string/apple"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:text="@string/rs500"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <LinearLayout
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/ic_add" />

                        <TextView
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_14ssp" />

                        <ImageView
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/ic_remove" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_minus10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_gravity="end"
        android:padding="@dimen/_2sdp"
        android:background="@drawable/squre_rect_shape"
        android:src="@drawable/ic_close" />

</FrameLayout>
