<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/backgreen"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/user" />

                        <EditText
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_name"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/cellphone" />

                        <EditText
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_phone_number"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/mail" />

                        <EditText
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_email"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/password" />

                        <EditText
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_password"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/password" />

                        <EditText
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/confirm_password"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <Button
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/round_rect_shape"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/have_an_account_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>